docs: highlight link breaks in i18n doc

--- a/i18n.md
+++ b/i18n.md
@@ -130,7 +130,7 @@ The core of the work to accomplish is in the `documentation/docs` folder.
 
 Do not forget to translate the `meta.json` files, which provide metadata like section titles.
 
-We did not feel necessary to translate the folder names, since it would 'only' affect URLs. This might have an bad influence on SEO. However, the subsections titles in the `.md` files that you will eventually translate will break links throughout your site. You will need to fix those before deployment.
+We did not feel necessary to translate the folder names, since it would 'only' affect URLs. This might have an bad influence on SEO. However, **the subsections titles in the `.md` files that you will eventually translate will break links** throughout your site. You will need to fix those before deployment.
 
 ### AI
 
