docs: add i18n types instructions

--- a/i18n.md
+++ b/i18n.md
@@ -50,35 +50,6 @@ The original repo has some templates for posting issues and Pull Requests. These
 
 For this reason **we modified the templates** to invite people to make sure they are posting their issue or PR to the correct repository depending on their needs.
 
-## UI elements
-
-Most of the translation work is related to the `documentation` folder. But **there are also some UI elements you might want to translate** to make your version complete.
-
-Some of these UI elements are located directly in the SvelteKit repo, others are handled by a another repo ([site-kit](https://github.com/sveltejs/site-kit)), common to all Svelte sites ([Svelte](https://svelte.dev), [SvelteKit](https://kit.svelte.dev), and the [tutorial](https://learn.svelte.dev)). This repo provides components with slots and props to handle translations.
-
-You shouldn't have to fork site-kit to provide your translations, but occasionally the Svelte team might modify some elements in the repo and forget about some i18n needs. In that case, open an issue/PR in the site-kit repo to ask for modifications.
-
-Here's the list of files in which you might need to translate UI stuff:
-- `sites/kit.svelte.dev/src/routes/+error.svelte`
-- `sites/kit.svelte.dev/src/routes/+layout.server.js`
-- `sites/kit.svelte.dev/src/routes/+layout.svelte`
-- `sites/kit.svelte.dev/src/routes/+page.svelte`
-- `sites/kit.svelte.dev/src/routes/docs/[slug]/+page.svelte`
-- `sites/kit.svelte.dev/src/routes/home/Deployment.svelte`
-- `sites/kit.svelte.dev/src/routes/home/Features.svelte`
-- `sites/kit.svelte.dev/src/routes/home/Hero.svelte`
-- `sites/kit.svelte.dev/src/routes/home/Intro.svelte`
-- `sites/kit.svelte.dev/src/routes/home/Showcase.svelte`
-- `sites/kit.svelte.dev/src/routes/home/Svelte.svelte`
-- `sites/kit.svelte.dev/src/routes/home/subtitles.vtt`
-- `sites/kit.svelte.dev/src/routes/nav.json/+server.js`
-- `sites/kit.svelte.dev/src/routes/schema.json`
-- `sites/kit.svelte.dev/src/routes/search/+page.svelte`
-
-> Be careful, this list might not be exhaustive.
-
-Additionally, you also might want to change the `lang` attribute in `sites/svelte.dev/src/app.html`.
-
 ## Environment variables
 
 You will need some environment variables, that you can set in the `sites/kit.svelte.dev/.env` file if you need them locally, or in your deployment environment if you need to [deploy](#deploying).
@@ -137,6 +108,64 @@ We did not feel necessary to translate the folder names, since it would 'only' a
 **We did not use AI tools** to translate these docs. An attempt was made at the beginning of the project, but there were many mistakes and hallucinations, which resulted in extra time checking the generated text. Plus, it felt better to manually control the tone and variations of each sentence, even if it meant writing every word of it.
 
 You might feel differently about AI tools, use them if you find them relevant.
+
+## UI elements
+
+Most of the translation work is related to the `documentation` folder. But **there are also some UI elements you might want to translate** to make your version complete.
+
+Some of these UI elements are located directly in the SvelteKit repo, others are handled by a another repo ([site-kit](https://github.com/sveltejs/site-kit)), common to all Svelte sites ([Svelte](https://svelte.dev), [SvelteKit](https://kit.svelte.dev), and the [tutorial](https://learn.svelte.dev)). This repo provides components with slots and props to handle translations.
+
+You shouldn't have to fork site-kit to provide your translations, but occasionally the Svelte team might modify some elements in the repo and forget about some i18n needs. In that case, open an issue/PR in the site-kit repo to ask for modifications.
+
+Here's the list of files in which you might need to translate UI stuff:
+- `sites/kit.svelte.dev/src/routes/+error.svelte`
+- `sites/kit.svelte.dev/src/routes/+layout.server.js`
+- `sites/kit.svelte.dev/src/routes/+layout.svelte`
+- `sites/kit.svelte.dev/src/routes/+page.svelte`
+- `sites/kit.svelte.dev/src/routes/docs/[slug]/+page.svelte`
+- `sites/kit.svelte.dev/src/routes/home/Deployment.svelte`
+- `sites/kit.svelte.dev/src/routes/home/Features.svelte`
+- `sites/kit.svelte.dev/src/routes/home/Hero.svelte`
+- `sites/kit.svelte.dev/src/routes/home/Intro.svelte`
+- `sites/kit.svelte.dev/src/routes/home/Showcase.svelte`
+- `sites/kit.svelte.dev/src/routes/home/Svelte.svelte`
+- `sites/kit.svelte.dev/src/routes/home/subtitles.vtt`
+- `sites/kit.svelte.dev/src/routes/nav.json/+server.js`
+- `sites/kit.svelte.dev/src/routes/schema.json`
+- `sites/kit.svelte.dev/src/routes/search/+page.svelte`
+
+> Be careful, this list might not be exhaustive.
+
+Additionally, you also might want to change the `lang` attribute in `sites/svelte.dev/src/app.html`.
+
+## Modules and interfaces
+
+The 'Modules' and 'Types' sections of the docs directly refer to the kit package source code. For instance, the documentation [here](https://kit.svelte.dev/docs/modules#$app-environment-building) and [here](https://kit.svelte.dev/docs/types#public-types-adapter) is not written anywhere in the `documentation` folder, but in the kit package source code instead.
+
+If you want the types description to also be translated, then you will need to work on these files:
+- `packages/kit/src/exports/hooks/sequence.js`
+- `packages/kit/src/exports/index.js`
+- `packages/kit/src/exports/node/polyfills.js`
+- `packages/kit/src/exports/public.d.ts`
+- `packages/kit/src/exports/vite/index.js`
+- `packages/kit/src/runtime/app/environment.js`
+- `packages/kit/src/runtime/app/forms.js`
+- `packages/kit/src/runtime/app/navigation.js`
+- `packages/kit/src/runtime/app/stores.js`
+- `packages/kit/src/types/ambient.d.ts`
+- `packages/kit/src/types/private.d.ts`
+- `packages/kit/src/types/synthetic/$env+dynamic+private.md`
+- `packages/kit/src/types/synthetic/$env+dynamic+public.md`
+- `packages/kit/src/types/synthetic/$env+static+private.md`
+- `packages/kit/src/types/synthetic/$env+static+public.md`
+- `packages/kit/src/types/synthetic/$lib.md`
+- `sites/kit.svelte.dev/scripts/types/index.js`
+
+> Be careful, this list might not be exhaustive.
+
+> In these `packages` files, you probably won't be able to use the environment variables for links described [here](#external-links), since it's a different package. It might actually be possible, but we did not investigate too much on the matter.
+
+> You will need to run `npm run generate:types` in the `packages/kit` folder before running `npm run dev` in the `sites/kit.svelte.dev` folder in order to be able to see your changes in dev mode.
 
 ## Glossary
 
