--- a/i18n.md
+++ b/i18n.md
@@ -4,7 +4,7 @@ You'll find in this section some information about the process we used to transl
 
 You can find the translated version at the following address: https://kit.sveltefr.dev.
 
-## Fork
+## Repo
 
 **We recommend that you fork the [original SvelteKit repo](https://github.com/sveltejs/kit)** rather than this one to keep the original repo as reference.
 
@@ -22,13 +22,13 @@ On Github, when you open a PR on a forked repo, the PR will by default target to
 
 **When opening PRs for submitting a translation to your own repo, make sure to target your own repo** rather than the original one.
 
-## Workflows
+### Workflows
 
-### Original workflows
+#### Original workflows
 
 The original Svelte has some workflows to make sure everything works as expected. **We chose to remove these workflows** to avoid being blocked by CI errors that do not really matter to us. Feel free to keep them if you'd like.
 
-### Docs tracking workflow
+#### Docs tracking workflow
 
 We want these docs to be as close as possible to the original ones. This means keeping them up-to-date as much as possible. For that reason, being notified of changes on the docs is very important.
 
@@ -44,7 +44,7 @@ These jobs will check every 3 hours if commits have affected files in their resp
 
 We feel the first option is safer, but you might have a different opinion.
 
-## Github templates
+### Github templates
 
 The original repo has some templates for posting issues and Pull Requests. These templates are not relevant in our case since we are _not_ willing to push anything to Svelte's repo. Moreover, we do not want people to accidently open issues or PRs concerning Svelte bugs or feature requests in our translated repository.
 
@@ -103,13 +103,7 @@ Do not forget to translate the `meta.json` files, which provide metadata like se
 
 We did not feel necessary to translate the folder names, since it would 'only' affect URLs. This might have an bad influence on SEO. However, **the subsections titles in the `.md` files that you will eventually translate will break links** throughout your site. You will need to fix those before deployment.
 
-### AI
-
-**We did not use AI tools** to translate these docs. An attempt was made at the beginning of the project, but there were many mistakes and hallucinations, which resulted in extra time checking the generated text. Plus, it felt better to manually control the tone and variations of each sentence, even if it meant writing every word of it.
-
-You might feel differently about AI tools, use them if you find them relevant.
-
-## UI elements
+### UI elements
 
 Most of the translation work is related to the `documentation` folder. But **there are also some UI elements you might want to translate** to make your version complete.
 
@@ -138,7 +132,7 @@ Here's the list of files in which you might need to translate UI stuff:
 
 Additionally, you also might want to change the `lang` attribute in `sites/svelte.dev/src/app.html`.
 
-## Modules and interfaces
+### Modules and interfaces
 
 The 'Modules' and 'Types' sections of the docs directly refer to the kit package source code. For instance, the documentation [here](https://kit.svelte.dev/docs/modules#$app-environment-building) and [here](https://kit.svelte.dev/docs/types#public-types-adapter) is not written anywhere in the `documentation` folder, but in the kit package source code instead.
 
@@ -166,6 +160,12 @@ If you want the types description to also be translated, then you will need to w
 > In these `packages` files, you probably won't be able to use the environment variables for links described [here](#external-links), since it's a different package. It might actually be possible, but we did not investigate too much on the matter.
 
 > You will need to run `npm run generate:types` in the `packages/kit` folder before running `npm run dev` in the `sites/kit.svelte.dev` folder in order to be able to see your changes in dev mode.
+
+### AI
+
+**We did not use AI tools** to translate these docs. An attempt was made at the beginning of the project, but there were many mistakes and hallucinations, which resulted in extra time checking the generated text. Plus, it felt better to manually control the tone and variations of each sentence, even if it meant writing every word of it.
+
+You might feel differently about AI tools, use them if you find them relevant.
 
 ## Glossary
 
