--- a/i18n.md
+++ b/i18n.md
@@ -8,7 +8,7 @@ You can find the translated version at the following address: https://kit.svelte
 
 **We recommend that you fork the [original SvelteKit repo](https://github.com/sveltejs/kit)** rather than this one to keep the original repo as reference.
 
-Either way, you should know that the main modifications we made to original repo are the following :
+Either way, you should know that the main modifications we made to the original repo are the following:
 - removed original workflows
 - added docs tracking workflow
 - modified Github templates
@@ -101,7 +101,7 @@ The core of the work to accomplish is in the `documentation/docs` folder.
 
 Do not forget to translate the `meta.json` files, which provide metadata like section titles.
 
-We did not feel necessary to translate the folder names, since it would 'only' affect URLs. This might have an bad influence on SEO. However, **the subsections titles in the `.md` files that you will eventually translate will break links** throughout your site. You will need to fix those before deployment.
+We did not feel necessary to translate the folder names, since it would 'only' affect URLs. This might have a bad influence on SEO. However, **the subsections titles in the `.md` files that you will eventually translate will break links** throughout your site. You will need to fix those before deployment.
 
 ### UI elements
 
@@ -134,9 +134,9 @@ Additionally, you also might want to change the `lang` attribute in `sites/svelt
 
 ### Modules and interfaces
 
-The 'Modules' and 'Types' sections of the docs directly refer to the kit package source code. For instance, the documentation [here](https://kit.svelte.dev/docs/modules#$app-environment-building) and [here](https://kit.svelte.dev/docs/types#public-types-adapter) is not written anywhere in the `documentation` folder, but in the kit package source code instead.
+The 'Modules' and 'Types' sections of the docs directly refer to the kit package source code. For instance, the documentation [here](https://kit.svelte.dev/docs/modules#$app-environment-building) and [here](https://kit.svelte.dev/docs/types#public-types-adapter) are not written anywhere in the `documentation` folder, but in the kit package source code instead.
 
-If you want the types description to also be translated, then you will need to work on these files:
+If you want the types descriptions to also be translated, then you will need to work on these files:
 - `packages/kit/src/exports/hooks/sequence.js`
 - `packages/kit/src/exports/index.js`
 - `packages/kit/src/exports/node/polyfills.js`
@@ -169,9 +169,9 @@ You might feel differently about AI tools, use them if you find them relevant.
 
 ## Glossary
 
-In a web development context, some words do not translate well in some languages – or at least in french –, even if they technically have an official translation. This is because people have taken the habit to use the original word in english rather than the translated one. These are called _anglicisms_.
+In a web development context, some words do not translate well in some languages – or at least in French –, even if they technically have an official translation. This is because people have taken the habit to use the original word in English rather than the translated one. These are called _anglicisms_.
 
-For example, in french, _callback_ should be translated to _fonction de rappel_. But in practice almost nobody uses the translated word, and we stick to _callback_ instead.
+For example, in French, _callback_ should be translated to _fonction de rappel_. But in practice almost nobody uses the translated word, and we stick to _callback_ instead.
 
 For this reason, **we chose to remain as close as possible to the actual usage**, and keep such words in their original version.
 
